--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "homepage": "https://github.com/acjbizar/canvas#readme",
   "dependencies": {
     "grunt": "^1.0.3",
-    "grunt-twig-render": "^1.8.2"
+    "grunt-twig": "^1.0.0",
+    "grunt-twig-render": "^1.8.2",
+    "gulp": "^4.0.0",
+    "gulp-twig": "^1.2.0"
   }
 }
