--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "twig-art-canvas",
-  "version": "0.1.0",
+  "name": "@deidee/hetcanvas",
+  "version": "0.1.1",
   "description": "Boilerplate for Internet art, using Twig.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "templates": "gulp templates"
   },
   "repository": {
     "type": "git",
